--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "json-beautify": "^1.1.1",
+    "prettier": "^2.1.2",
     "uuid": "^7.0.3"
   }
 }
